improvements to registartion, translations

--- a/app/src/main/resources/site/pages/user/components/userEditModal.html
+++ b/app/src/main/resources/site/pages/user/components/userEditModal.html
@@ -91,7 +91,7 @@
                         <label for="address-user-input" class="label">Билет
                             Костиконнект2022</label>
                         <input data-th-if="${userHasTicket}" data-th-disabled="${userHasTicket}"
-                            data-th-value="${turboTicket} ? 'Турбо билет' : 'Обычный билет'" name="kosticonnect2022"
+                            data-th-value="${turboTicket} ? 'Турбо билет' : 'Онлайн билет'" name="kosticonnect2022"
                             type="text" class="input-text" id="kosticonnect2022-input" />
                         <input data-th-unless="${userHasTicket}" name="kosticonnect2022" type="text" class="input-text"
                             id="kosticonnect2022-input" />
