--- a/app/src/main/resources/api/festival/templates/playersList.html
+++ b/app/src/main/resources/api/festival/templates/playersList.html
@@ -1,5 +1,6 @@
 <div data-th-each="player: ${players}">
     <div data-th-text="${player.displayName}"></div>
-    <div data-th-text="${player.data.email}"></div>
-    <div data-th-text="${player.data.phone}"></div>
+    <div data-th-text="${player.email}"></div>
+    <div data-th-text="${player.phone}"></div>
+    <div data-th-text="${player.discord}"></div>
 </div>
