--- a/frontend/app/scss/pages/_kosticonnect_game_details.scss
+++ b/frontend/app/scss/pages/_kosticonnect_game_details.scss
@@ -52,10 +52,20 @@
         font-size: 20px;
         line-height: 1.6;
         color: $kosticonnect-primary2;
+
+        .k_gdp-info.m-gm_info & {
+            padding-left: 10px;
+        }
     }
 
     &-info {
         padding-bottom: 16px;
+
+        &.m-gm_info {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+        }
     }
 
     &-img_decor {
