--- a/frontend/app/scss/pages/_myGamesStep4-5.scss
+++ b/frontend/app/scss/pages/_myGamesStep4-5.scss
@@ -76,6 +76,11 @@
     &-players {
         &-list {
             margin-top: 10px;
+
+            .k_gdp-info.m-gm_info & {
+                flex: 1 1 100%;
+                color: $kosticonnect-primary3;
+            }
         }
 
         &-item {
@@ -84,6 +89,10 @@
     
             span {
                 flex: 1 1 50%;
+            }
+
+            .k_gdp-info.m-gm_info & {
+                padding-left: 0;
             }
         }
     }
