--- a/app/src/main/resources/api/festival/templates/playersListModal.html
+++ b/app/src/main/resources/api/festival/templates/playersListModal.html
@@ -49,7 +49,8 @@
             </div>
 
             <div class="table-body_cell">
-                <span class="value" data-th-text="${player.discord.username + ':' + player.discord.discriminator}">
+                <span data-th-if="${player.discord}" class="value"
+                    data-th-text="${player.discord.username + '#' + player.discord.discriminator}">
                 </span>
             </div>
 
@@ -64,7 +65,8 @@
 
             <div class="table-body_cell k_games-table-remove_btn">
                 <button class="button js_remove-player"
-                    data-th-attr="data-playerid=${player._id}, data-gameid=${gameId}" title="Удалить"><span class="icon-delete"></span></button>
+                    data-th-attr="data-playerid=${player._id}, data-gameid=${gameId}" title="Удалить"><span
+                        class="icon-delete"></span></button>
             </div>
         </div>
     </div>
